[package]
name = "random-image"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
# axum = "0.2.6"
# tokio = { version = "1.12.0", features = ["full"] }
# tower-http = { version = "0.1.1", features = ["full"] }

[dependencies]
rocket = "0.4.10"
rocket_contrib = "0.4.10"
lazy_static = "1.4.0"
rand = "0.8.4"